--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,9 +13,7 @@ on:
   push:
     branches:
     - main
-    
   
-
 jobs:
   generate:
     permissions: 
@@ -24,6 +22,10 @@ jobs:
     timeout-minutes: 10
     
     steps:
+      - name: Debug Token
+        run: echo "Token: $GITHUB_TOKEN"
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
